Incomplete - # 1520: contact edit dialog is not working with ext windows http://www.tine20.org/bugtracker/view.php?id=1520
hide ugly scrollbar in ext window forms

git-svn-id: file:///www/metaways/svn.tine20.org/repo/trunk@10419 8d11cdf3-9d2f-0410-bbb5-e098f187f06b

--- a/tine20/Tinebase/css/SmallForms.css
+++ b/tine20/Tinebase/css/SmallForms.css
@@ -49,6 +49,9 @@
     /*font-weight: bold;*/
     margin-bottom: 2px;
 }
+.ext-gecko .x-window-body .x-form-item {
+	overflow: hidden;
+}
 
 .x-fieldset {
     padding: 5px 5px 0px 5px;
